--- a/_sass/_navigation.scss
+++ b/_sass/_navigation.scss
@@ -83,21 +83,21 @@
       line-height: 1.5;
       text-align: center;
       text-decoration: none;
-      color: mix(#fff, $gray, 25%);
-      border: 1px solid $light-gray;
+      color: var(--pagination-text-color);
+      border: 1px solid var(--global-border-color);
       border-radius: 0;
 
       &:hover {
-        color: $link-color-hover;
+        color: var(--global-link-color-hover);
       }
 
       &.current {
         color: #fff;
-        background: $primary-color;
+        background: var(--pagination-bg-active);
       }
 
       &.disabled {
-        color: mix(#fff, $gray, 75%);
+        color: var(--global-text-color-light);
         pointer-events: none;
         cursor: not-allowed;
       }
@@ -131,12 +131,12 @@
     font-weight: bold;
     text-align: center;
     text-decoration: none;
-    color: mix(#fff, $gray, 50%);
-    border: 1px solid $light-gray;
+    color: var(--pagination-text-color);
+    border: 1px solid var(--global-border-color);
     border-radius: $border-radius;
 
     &:hover {
-      color: $link-color-hover;
+      color: var(--global-link-color-hover);
     }
 
     &:first-child {
@@ -151,7 +151,7 @@
     }
 
     &.disabled {
-      color: mix(#fff, $gray, 75%);
+      color: var(--global-text-color-light);
       pointer-events: none;
       cursor: not-allowed;
     }
@@ -196,7 +196,7 @@
     padding: 0 0.5rem;
     border: 0;
     outline: none;
-    background-color: $primary-color;
+    background-color: var(--pagination-bg-active);
     color: #fff;
     cursor: pointer;
     z-index: 100;
@@ -338,7 +338,7 @@
     padding-right: 0.5em;
     color: #fff;
     font-weight: bold;
-    background: $primary-color;
+    background: var(--pagination-bg-active);
     border-radius: $border-radius;
 
     &:hover {
