--- a/_sass/_utilities.scss
+++ b/_sass/_utilities.scss
@@ -197,7 +197,7 @@ body:hover .visually-hidden button {
 
 .social-icons {
   .fa {
-    color: #000;
+    color: var(--global-text-color);
   }
 
   .fa-bluesky,
@@ -327,7 +327,7 @@ body:hover .visually-hidden button {
   position: relative;
   width: $navicon-width;
   height: $navicon-height;
-  background: #fff;
+  background: var(--navicon-color);
   margin: auto;
   -webkit-transition: 0.3s;
   transition: 0.3s;
@@ -339,7 +339,7 @@ body:hover .visually-hidden button {
     left: 0;
     width: $navicon-width;
     height: $navicon-height;
-    background: #fff;
+    background: var(--navicon-color);
     -webkit-transition: 0.3s;
     transition: 0.3s;
   }
