--- a/_sass/theme/_default_light.scss
+++ b/_sass/theme/_default_light.scss
@@ -45,4 +45,10 @@ $sidebar-screen-min-width   : 1024px;
     --global-text-color-light           : #{$light-gray};
     --global-thead-color                : #{$lighter-gray};
     --card-bg-color                     : #f8f9fa;
+    --selection-bg-color                : #000;
+    --selection-text-color              : #fff;
+    --notice-bg-color                   : #{$lighter-gray};
+    --navicon-color                     : #{$dark-gray};
+    --pagination-text-color             : #{$dark-gray};
+    --pagination-bg-active              : #{$gray};
 }
